--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
 }
