--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@expo/vector-icons": "^13.0.0",
     "expo-image-picker": "~14.0.2",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0"
+    "react-native-reanimated": "~2.12.0",
+    "react-native-view-shot": "3.4.0",
+    "expo-media-library": "~15.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
